arch/arm/mm/fault.c
@@ -25,14 +25,14 @@
 
 #include "fault.h"
 
+#ifdef CONFIG_MMU
+
 bool copy_from_kernel_nofault_allowed(const void *unsafe_src, size_t size)
 {
 	unsigned long addr = (unsigned long)unsafe_src;
 
 	return addr >= TASK_SIZE && ULONG_MAX - addr >= size;
 }
-
-#ifdef CONFIG_MMU
 
 /*
  * This is useful to dump out the page tables associated with
